@@ -650,4 +650,201 @@ public class SMIMEStructureTest extends AbstractMailTest {
         }
     }
 
+    public void testYetAnotherMIMEStructure() {
+        try {
+            getSession();
+
+            final byte[] smime = ("From: sadsr@dsa.nl\n" +
+                "Content-Type: multipart/signed; boundary=\"Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\"; protocol=\"application/pkcs7-signature\"; micalg=sha1\n" +
+                "Date: Wed, 14 May 2014 08:56:15 -0400\n" +
+                "Subject: F G H J\n" +
+                "To: asdd@dsa.nl>\n" +
+                "Message-Id: <7029863B-C54D-403B-B29C-9BD00E0DBABE@gmx.de>\n" +
+                "Mime-Version: 1.0\n" +
+                "\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\n" +
+                "Content-Transfer-Encoding: 7bit\n" +
+                "Content-Type: text/plain;\n" +
+                "    charset=us-ascii\n" +
+                "\n" +
+                "Hi Asdfg\n" +
+                ";)\n" +
+                "dsfgh\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\n" +
+                "Content-Disposition: attachment;\n" +
+                "    filename=smime.p7s\n" +
+                "Content-Type: application/pkcs7-signature;\n" +
+                "    name=smime.p7s\n" +
+                "Content-Transfer-Encoding: base64\n" +
+                "\n" +
+                "MIAGCSqGSIb3DQEHAqCAMIACAQExCzAJBgUrDgMCGgUAMIAGCSqGSIb3DQEHAQAAoIIO2TCCBIow\n" +
+                "ggNyoAMCAQICECf06hH0eobEbp27bqkXBwcwDQYJKoZIhvcNAQEFBQAwbzELMAkGA1UEBhMCU0Ux\n" +
+                "FDASBgNVBAoTC0FkZFRydXN0IEFCMSYwJAYDVQQLEx1BZGRUcnVzdCBFeHRlcm5hbCBUVFAgTmV0\n" +
+                "d29yazEiMCAGA1UEAxMZQWRkVHJ1c3QgRXh0ZXJuYWwgQ0EgUm9vdDAeFw0wNTA2MDcwODA5MTBa\n" +
+                "Fw0yMDA1MzAxMDQ4MzhaMIGuMQswCQYDVQQGEwJVUzELMAkGA1UECBMCVVQxFzAVBgNVBAcTDlNh\n" +
+                "bHQgTGFrZSBDaXR5MR4wHAYDVQQKExVUaGUgVVNFUlRSVVNUIE5ldHdvcmsxITAfBgNVBAsTGGh0\n" +
+                "dHA6Ly93d3cudXNlcnRydXN0LmNvbTE2MDQGA1UEAxMtVVROLVVTRVJGaXJzdC1DbGllbnQgQXV0\n" +
+                "aGVudGljYXRpb24gYW5kIEVtYWlsMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAsjmF\n" +
+                "pPJ9q0E7YkY3rs3BYHW8OWX5ShpHornMSMxqmNVNNRm5pELlzkniii8efNIxB8dOtINknS4p1aJk\n" +
+                "xIW9hVE1eaROaJB7HHqkkqgX8pgV8pPMyaQylbsMTzC9mKALi+VuG6JG+ni8om+rWV6lL8/K2m2q\n" +
+                "L+usobNqqrcuZzWLeeEeaYji5kbNoKXqvgvOdjp6Dpvq/NonWz1zHyLmSGHGTPNpsaguG7bUMSAs\n" +
+                "vIKKjqQOpdeJQ/wWWq8dcdcRWdq6hw2v+vPhwvCkxWeM1tZUOt4KpLoDd7NlyP0e03RiqhjKaJMe\n" +
+                "oYV+9Udly/hNVyh00jT/MLbu9mIwFIws6wIDAQABo4HhMIHeMB8GA1UdIwQYMBaAFK29mHo0tCb3\n" +
+                "+sQmVO8DveAky1QaMB0GA1UdDgQWBBSJgmd9xJ0mcABLtFBIfN49rgRufTAOBgNVHQ8BAf8EBAMC\n" +
+                "AQYwDwYDVR0TAQH/BAUwAwEB/zB7BgNVHR8EdDByMDigNqA0hjJodHRwOi8vY3JsLmNvbW9kb2Nh\n" +
+                "LmNvbS9BZGRUcnVzdEV4dGVybmFsQ0FSb290LmNybDA2oDSgMoYwaHR0cDovL2NybC5jb21vZG8u\n" +
+                "bmV0L0FkZFRydXN0RXh0ZXJuYWxDQVJvb3QuY3JsMA0GCSqGSIb3DQEBBQUAA4IBAQAZ2IkRbyis\n" +
+                "pgCi54fBm5AD236hEv0e8+LwAamUVEJrmgnEoG3XkJIEA2Z5Q3H8+G+v23ZF4jcaPd3kWQR4rBz0\n" +
+                "g0bzes9bhHIt5UbBuhgRKfPLSXmHPLptBZ2kbWhPrXIUNqi5sf2/z3/wpGqUNVCPz4FtVbHdWTBK\n" +
+                "322gnGQfSXzvNrv042n0+DmPWq1LhTq3Du3Tzw1EovsEv+QvcI4l+1pUBrPQxLxtjftzMizpm4Qk\n" +
+                "LdZ/kXpoAlAfDj9N6cz1u2fo3BwuO/xOzf4CjuOoEwqlJkRl6RDyTVKnrtw+ymsyXEFs/vVdoOr/\n" +
+                "0fqbhlhtPZZH5f4ulQTCAMyOofK7MIIFGjCCBAKgAwIBAgIQbRnqpxlPajMi5iIyeqpx3jANBgkq\n" +
+                "hkiG9w0BAQUFADCBrjELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAlVUMRcwFQYDVQQHEw5TYWx0IExh\n" +
+                "a2UgQ2l0eTEeMBwGA1UEChMVVGhlIFVTRVJUUlVTVCBOZXR3b3JrMSEwHwYDVQQLExhodHRwOi8v\n" +
+                "d3d3LnVzZXJ0cnVzdC5jb20xNjA0BgNVBAMTLVVUTi1VU0VSRmlyc3QtQ2xpZW50IEF1dGhlbnRp\n" +
+                "Y2F0aW9uIGFuZCBFbWFpbDAeFw0xMTA0MjgwMDAwMDBaFw0yMDA1MzAxMDQ4MzhaMIGTMQswCQYD\n" +
+                "VQQGEwJHQjEbMBkGA1UECBMSR3JlYXRlciBNYW5jaGVzdGVyMRAwDgYDVQQHEwdTYWxmb3JkMRow\n" +
+                "GAYDVQQKExFDT01PRE8gQ0EgTGltaXRlZDE5MDcGA1UEAxMwQ09NT0RPIENsaWVudCBBdXRoZW50\n" +
+                "aWNhdGlvbiBhbmQgU2VjdXJlIEVtYWlsIENBMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKC\n" +
+                "AQEAkoSEW0tXmNReL4uk4UDIo1NYX2Zl8TJO958yfVXQeExVt0KU4PkncQfFxmmkuTLE8UAakMwn\n" +
+                "VmJ/F7Vxaa7lIBvky2NeYMqiQfZq4aP/uN8fSG1lQ4wqLitjOHffsReswtqCAtbUMmrUZ28gE49c\n" +
+                "NfrlVICv2HEKHTcKAlBTbJUdqRAUtJmVWRIx/wmi0kzcUtve4kABW0ho3cVKtODtJB86r3FfB+Os\n" +
+                "vxQ7sCVxaD30D9YXWEYVgTxoi4uDD216IVfmNLDbMn7jSuGlUnJkJpFOpZIP/+CxYP0ab2hRmWON\n" +
+                "GoulzEKbm30iY9OpoPzOnpDfRBn0XFs1uhbzp5v/wQIDAQABo4IBSzCCAUcwHwYDVR0jBBgwFoAU\n" +
+                "iYJnfcSdJnAAS7RQSHzePa4Ebn0wHQYDVR0OBBYEFHoTTgB0W8Z4Y2QnwS/ioFu8ecV7MA4GA1Ud\n" +
+                "DwEB/wQEAwIBBjASBgNVHRMBAf8ECDAGAQH/AgEAMBEGA1UdIAQKMAgwBgYEVR0gADBYBgNVHR8E\n" +
+                "UTBPME2gS6BJhkdodHRwOi8vY3JsLnVzZXJ0cnVzdC5jb20vVVROLVVTRVJGaXJzdC1DbGllbnRB\n" +
+                "dXRoZW50aWNhdGlvbmFuZEVtYWlsLmNybDB0BggrBgEFBQcBAQRoMGYwPQYIKwYBBQUHMAKGMWh0\n" +
+                "dHA6Ly9jcnQudXNlcnRydXN0LmNvbS9VVE5BZGRUcnVzdENsaWVudF9DQS5jcnQwJQYIKwYBBQUH\n" +
+                "MAGGGWh0dHA6Ly9vY3NwLnVzZXJ0cnVzdC5jb20wDQYJKoZIhvcNAQEFBQADggEBAIXWvnhXVW0z\n" +
+                "f0RS/kLVBqgBA4CK+w2y/Uq/9q9BSfUbWsXSrRtzbj7pJnzmTJjBMCjfy/tCPKElPgp11tA9OYZm\n" +
+                "0aGbtU2bb68obB2v5ep0WqjascDxdXovnrqTecr+4pEeVnSy+I3T4ENyG+2P/WA5IEf7i686ZUg8\n" +
+                "mD2lJb+972DgSeUWyOs/Q4Pw4O4NwdPNM1+b0L1garM7/vrUyTo8H+2b/5tJM75CKTmD7jNpLoKd\n" +
+                "RU2oadqAGx490hpdfEeZpZsIbRKZhtZdVwcbpzC+S0lEuJB+ytF5OOu0M/qgOl0mWJ5hVRi0IdWZ\n" +
+                "1eBDQEIwvuql55TSsP7zdfl/bucwggUpMIIEEaADAgECAhB0XW+rL1MYSBRGDYODQ6EmMA0GCSqG\n" +
+                "SIb3DQEBBQUAMIGTMQswCQYDVQQGEwJHQjEbMBkGA1UECBMSR3JlYXRlciBNYW5jaGVzdGVyMRAw\n" +
+                "DgYDVQQHEwdTYWxmb3JkMRowGAYDVQQKExFDT01PRE8gQ0EgTGltaXRlZDE5MDcGA1UEAxMwQ09N\n" +
+                "T0RPIENsaWVudCBBdXRoZW50aWNhdGlvbiBhbmQgU2VjdXJlIEVtYWlsIENBMB4XDTE0MDUxMzAw\n" +
+                "MDAwMFoXDTE1MDUxMzIzNTk1OVowJTEjMCEGCSqGSIb3DQEJARYUc3RlZmFuLmdhYmxlckBnbXgu\n" +
+                "ZGUwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC64DZNhJxpXLBeGCdLM0Fw9tb0kr2G\n" +
+                "3fvoTpMF5fUfjB73LdRArGl6mBXj7Ya5G8Qgy7EXBg215Cm9av27gWXxZJVmLG3chXXx7zq42Io3\n" +
+                "NBx98u6jS5qCSlYeH7pP5PqPrQAkE181eE2g4bzlUuTXV0Todd9gGSJyXK2fLHmJ1p5EJtmuqjFX\n" +
+                "LvVqxoBEtd7m091xf2YEun0GmvT8BKBaXcX+UzE7UNWpqI0m3scnW3DSoF7n9C/GHbbim+WGyyCG\n" +
+                "gyhunOBOfhob7GqwquvySfaLU8BfyAHMn6/TjDCzgEAOKbcSVqiL+MARZwTi62ts8gcHsLuGpJIo\n" +
+                "vRoQem3/AgMBAAGjggHkMIIB4DAfBgNVHSMEGDAWgBR6E04AdFvGeGNkJ8Ev4qBbvHnFezAdBgNV\n" +
+                "HQ4EFgQUXuest2tqUffOU+XYHJyBe2PGVuswDgYDVR0PAQH/BAQDAgWgMAwGA1UdEwEB/wQCMAAw\n" +
+                "IAYDVR0lBBkwFwYIKwYBBQUHAwQGCysGAQQBsjEBAwUCMBEGCWCGSAGG+EIBAQQEAwIFIDBGBgNV\n" +
+                "HSAEPzA9MDsGDCsGAQQBsjEBAgEBATArMCkGCCsGAQUFBwIBFh1odHRwczovL3NlY3VyZS5jb21v\n" +
+                "ZG8ubmV0L0NQUzBXBgNVHR8EUDBOMEygSqBIhkZodHRwOi8vY3JsLmNvbW9kb2NhLmNvbS9DT01P\n" +
+                "RE9DbGllbnRBdXRoZW50aWNhdGlvbmFuZFNlY3VyZUVtYWlsQ0EuY3JsMIGIBggrBgEFBQcBAQR8\n" +
+                "MHowUgYIKwYBBQUHMAKGRmh0dHA6Ly9jcnQuY29tb2RvY2EuY29tL0NPTU9ET0NsaWVudEF1dGhl\n" +
+                "bnRpY2F0aW9uYW5kU2VjdXJlRW1haWxDQS5jcnQwJAYIKwYBBQUHMAGGGGh0dHA6Ly9vY3NwLmNv\n" +
+                "bW9kb2NhLmNvbTAfBgNVHREEGDAWgRRzdGVmYW4uZ2FibGVyQGdteC5kZTANBgkqhkiG9w0BAQUF\n" +
+                "AAOCAQEAEGTY/sL5BJqlPwZM3fO6sG0WZM4NV3pMjm6tdYxefOuxf1jXTLE39LtvvP4kBTdcjMOF\n" +
+                "lpOeGC4JDYTpQv6iDhxKePEcftdErAugIUwjtsoXOSeI8LW0v8r0TYW+uXWDxHoa2HxmcgzTbUv2\n" +
+                "yNpvZpmrE0fyKxM8dY9WRDZtKu0DFYRj5lQr9Y+ExayzgTO+/nvyUW08CtRUExyEqE5RJEl41pK0\n" +
+                "kElxkR6mkAPzV5I5+J6dsycu91i6K+aD0EgOTPeI5huqTzOE4ntEjVuyuzo+iRIWKLuJkgQ6le3s\n" +
+                "osvVzqCjY4b5b406TCUEl2kWkZkjJAKuS3M/j85vMmolAjGCA6swggOnAgEBMIGoMIGTMQswCQYD\n" +
+                "VQQGEwJHQjEbMBkGA1UECBMSR3JlYXRlciBNYW5jaGVzdGVyMRAwDgYDVQQHEwdTYWxmb3JkMRow\n" +
+                "GAYDVQQKExFDT01PRE8gQ0EgTGltaXRlZDE5MDcGA1UEAxMwQ09NT0RPIENsaWVudCBBdXRoZW50\n" +
+                "aWNhdGlvbiBhbmQgU2VjdXJlIEVtYWlsIENBAhB0XW+rL1MYSBRGDYODQ6EmMAkGBSsOAwIaBQCg\n" +
+                "ggHXMBgGCSqGSIb3DQEJAzELBgkqhkiG9w0BBwEwHAYJKoZIhvcNAQkFMQ8XDTE0MDUxNDEyNTYx\n" +
+                "NlowIwYJKoZIhvcNAQkEMRYEFCjCAHefLo7i3OacCf+g2+X8HSnZMIG5BgkrBgEEAYI3EAQxgasw\n" +
+                "gagwgZMxCzAJBgNVBAYTAkdCMRswGQYDVQQIExJHcmVhdGVyIE1hbmNoZXN0ZXIxEDAOBgNVBAcT\n" +
+                "B1NhbGZvcmQxGjAYBgNVBAoTEUNPTU9ETyBDQSBMaW1pdGVkMTkwNwYDVQQDEzBDT01PRE8gQ2xp\n" +
+                "ZW50IEF1dGhlbnRpY2F0aW9uIGFuZCBTZWN1cmUgRW1haWwgQ0ECEHRdb6svUxhIFEYNg4NDoSYw\n" +
+                "gbsGCyqGSIb3DQEJEAILMYGroIGoMIGTMQswCQYDVQQGEwJHQjEbMBkGA1UECBMSR3JlYXRlciBN\n" +
+                "YW5jaGVzdGVyMRAwDgYDVQQHEwdTYWxmb3JkMRowGAYDVQQKExFDT01PRE8gQ0EgTGltaXRlZDE5\n" +
+                "MDcGA1UEAxMwQ09NT0RPIENsaWVudCBBdXRoZW50aWNhdGlvbiBhbmQgU2VjdXJlIEVtYWlsIENB\n" +
+                "AhB0XW+rL1MYSBRGDYODQ6EmMA0GCSqGSIb3DQEBAQUABIIBAIjCLK51hq+lk6Ii4Oxgh4GoNwRL\n" +
+                "GTppEtDs5R1PU3gYbpis78Ay9ZhjHpmM7ip3IX+PAGqsO3K7ASfZk68yeqpyuBy8mr3jA4cbymMh\n" +
+                "pAHl6SOzA2VJqEhh+CxDWfBlzdMm3v/JXAIE4WJAUhiD7XW3lqX1O2RBTwLHUypPAx3/8B1to6Gn\n" +
+                "Bvjl9VXHCRRbimvMR6+mRXJaXdyF9Q8kyBtQ1YQMpgPln+C5svwRQK5znMMDow6ky6zCnVPvx6TA\n" +
+                "dRqQbotPXRhJYf2hYV62t5QMZuz4Y7fHB6k6+VVdhC1Kms3J1YxnQX52Fr7HQcOgKeRKvluug2wV\n" +
+                "EkJjJDoENHQAAAAAAAA=\n" +
+                "\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350--\n").getBytes();
+
+            final MailMessage mail = MimeMessageConverter.convertMessage(smime);
+
+            final MIMEStructureHandler handler = new MIMEStructureHandler(-1L);
+            new StructureMailMessageParser().parseMailMessage(mail, handler);
+
+            final JSONObject jsonMailObject = handler.getJSONMailObject();
+            assertNotNull("Structured JSON mail object is null.", jsonMailObject);
+
+            // System.out.println(jsonMailObject.toString(2));
+
+            assertTrue("Detected a body object, but shouldn't be there.", !jsonMailObject.hasAndNotNull("body"));
+
+            assertTrue("Missing S/MIME body text.", jsonMailObject.hasAndNotNull("smime_body_text"));
+            assertTrue("Missing S/MIME body data.", jsonMailObject.hasAndNotNull("smime_body_data"));
+        } catch (final Exception e) {
+            e.printStackTrace();
+            fail(e.getMessage());
+        }
+    }
+
+    public void testYetAnotherMIMEStructure2() {
+        try {
+            getSession();
+
+            final byte[] smime = (
+                "From: asdsad@gmx.de\n" +
+                "Content-Type: multipart/signed; boundary=\"Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\"; protocol=\"application/pkcs7-signature\"; micalg=sha1\n" +
+                "Date: Wed, 14 May 2014 08:56:15 -0400\n" +
+                "Subject: My subject\n" +
+                "To: hgjjgh@open-xchange.com\n" +
+                "Message-Id: <7029863B-C54D-403B-B29C-9BAFD00E0DBABE@gmx.de>\n" +
+                "Mime-Version: 1.0 (Mac OS X Mail 7.2 \\(1874\\))\n" +
+                "X-Mailer: Apple Mail (2.1874)\n" +
+                "\n" +
+                "\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\n" +
+                "Content-Transfer-Encoding: 7bit\n" +
+                "Content-Type: text/plain;\n" +
+                "    charset=us-ascii\n" +
+                "\n" +
+                "Hi stefan\n" +
+                ";)\n" +
+                "stefan\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350\n" +
+                "Content-Disposition: attachment;\n" +
+                "    filename=smime.p7s\n" +
+                "Content-Type: application/pkcs7-signature;\n" +
+                "    name=smime.p7s\n" +
+                "Content-Transfer-Encoding: base64\n" +
+                "\n" +
+                "MIAGCSqGSIb3DQEHAqCAMIACAQExCzAJBgUrDgMCGgUAMIAGCSqGSIb3DQEHAQAAoIIO2TCCBIow\n" +
+                "ggNyoAMCAQICECf06hH0eobEbp27bqkXBwcwDQYJKoZIhvcNAQEFBQAwbzELMAkGA1UEBhMCU0Ux\n" +
+                "FDASBgNVBAoTC0FkZFRydXN0IEFCMSYwJAYDVQQLEx1BZGRUcnVzdCBFeHRlcm5hbCBUVFAgTmV0\n" +
+                "GTppEtDs5R1PU3gYbpis78Ay9ZhjHpmM7ip3IX+PAGqsO3K7ASfZk68yeqpyuBy8mr3jA4cbymMh\n" +
+                "pAHl6SOzA2VJqEhh+CxDWfBlzdMm3v/JXAIE4WJAUhiD7XW3lqX1O2RBTwLHUypPAx3/8B1to6Gn\n" +
+                "Bvjl9VXHCRRbimvMR6+mRXJaXdyF9Q8kyBtQ1YQMpgPln+C5svwRQK5znMMDow6ky6zCnVPvx6TA\n" +
+                "dRqQbotPXRhJYf2hYV62t5QMZuz4Y7fHB6k6+VVdhC1Kms3J1YxnQX52Fr7HQcOgKeRKvluug2wV\n" +
+                "EkJjJDoENHQAAAAAAAA=\n" +
+                "\n" +
+                "--Apple-Mail=_7F65DE4D-4C06-49D2-BFA0-63F9B3D3E350--\n" +
+                "").getBytes();
+
+            final MailMessage mail = MimeMessageConverter.convertMessage(smime);
+
+            final MIMEStructureHandler handler = new MIMEStructureHandler(-1L);
+            new StructureMailMessageParser().parseMailMessage(mail, handler);
+
+            final JSONObject jsonMailObject = handler.getJSONMailObject();
+            assertNotNull("Structured JSON mail object is null.", jsonMailObject);
+
+            // System.out.println(jsonMailObject.toString(2));
+
+            assertTrue("Detected a body object, but shouldn't be there.", !jsonMailObject.hasAndNotNull("body"));
+
+            assertTrue("Missing S/MIME body text.", jsonMailObject.hasAndNotNull("smime_body_text"));
+            assertTrue("Missing S/MIME body data.", jsonMailObject.hasAndNotNull("smime_body_data"));
+        } catch (final Exception e) {
+            e.printStackTrace();
+            fail(e.getMessage());
+        }
+    }
+
 }
