@@ -1,3 +1,7 @@
+* 2014-06-02 - thorben.betten@open-xchange.com
+
+ - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
+
 * 2014-05-19 - thorben.betten@open-xchange.com
 
  - Fix for bug 32481: Ignore requests to LinkedIn JSON API if no LinkedIn OAuth account is available for associated user
